# nice_coding_agent

./: .gitignore  README.MD  example.env  example.ignore  pyproject.toml
.nice/: .ignore  file_index.md  project_overview.md
.nice/skills/: python_agentic_workflow.md  python_fastapi_expert.md  react_frontend_expert.md
app/: controller.py  events.py  exceptions.py  main.py  presenter.py  router.py  state.py  theme.py
app/components/: ask_llm_view.py  browse_view.py  context_actions.py  context_card.py  context_stack.py  documents_view.py  icons.py  implementation_view.py  prompt_dock.py  settings_view.py  sidebar.py  skills_view.py  stack_header.py  stream_view.py  web_search_view.py
app/models/: context_entry.py
app/static/: styles.css
core/: agent_tools.py  config.py  container.py  db.py  entities.py  exceptions.py  mcp_server.py  prompt_config.py  router.py  schemas.py
core/prompts/: ask_llm_system_prompt.md  browse_system_prompt.md  build_context_prompt.md  epic_plan_review_prompt.md  epic_plan_system_prompt.md  file_overview_prompt.md  implementation_draft_prompt.md  implementation_investigate_prompt.md  implementation_review_prompt.md  index_search_prompt.md  merge_overview_prompt.md  planning_review_prompt.md  planning_system_prompt.md  research_system_prompt.md  summarization_system_prompt.md
core/sandbox/: __init__.py  base.py  docker.py  linux.py  macos.py  resolvers.py
core/web_search/: base.py  exa.py  noop.py
core/workflows/: ask_llm.py  browse.py  build_context.py  create_epic.py  create_file_index.py  create_overview.py  implement_task.py  plan_task.py  research.py  shared.py  summarize_item.py
infra/: Dockerfile  alembic.ini  docker-compose.yml  init.sql
lib/: code_parser.py  helpers.py  logger.py  tree_parser.py  treesitter_extractor.py
search/: config.py  document_indexer.py  document_search.py  entities.py  indexer.py  ml_models.py  search.py
search/chroma_poc/: ingest.py
search/db/: database.py  models.py  repository.py
search/document_processing/: discovery.py  loaders.py  splitters.py
tests/: conftest.py
(+22 files in other folders)
