[project]
name = "nice-coding-agent"
version = "0.1.0"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
    "alembic>=1.18.4",
    "einops>=0.8.2",
    "mxbai-rerank>=0.1.6",
    "pgvector>=0.4.2",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "torch>=2.12.0",
    "docx2txt>=0.9",
    "exa-py>=2.11.0",
    "fastapi>=0.135.3",
    "langchain>=0.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "markdown>=3.10.2",
    "mcp>=1.27.0",
    "nicegui>=3.10.0",
    "pathspec>=1.0.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers[onnx]>=5.5.0",
    "transformers>=4.46,<5",
    "snowballstemmer>=3.0.1",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "unstructured>=0.22.21",
    "langchain-google-genai>=4.2.1",
    "tenacity>=9.1.4",
    "optimum[onnxruntime]>=2.1.0",
    "langchain-mcp-adapters>=0.2.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
]

[project.scripts]
agent = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  ".git",
  ".venv",
  "dist",
  "*.egg-info",
]

[tool.hatch.build.targets.wheel.force-include]
"." = "."


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
env = [
    "NICE_AGENT_PATH=.",
]

[tool.coverage.run]
source = ["app", "lib", "api"]
omit = ["tests/*"]
